--- a/docker/deps/Dockerfile
+++ b/docker/deps/Dockerfile
@@ -2,9 +2,9 @@
 FROM ibmcom/powerai:1.6.2-tensorflow-ubuntu18.04-py36
 ENV IBM_POWERAI_LICENSE_ACCEPT=yes
 
-RUN bash -c " \
-    if [ '$HOSTTYPE' = 'powerpc64le' ]; then \
-        ${CONDA_INSTALL_DIR}/bin/conda install -c powerai ray ; \
+RUN bash -c ' \
+    if [ "$HOSTTYPE" = "powerpc64le" ]; then \
+        ${CONDA_INSTALL_DIR}/bin/conda install --name wmlce -c powerai ray ; \
     else \
         ${CONDA_INSTALL_DIR}/envs/wmlce/bin/pip install ray; \
-    fi"
+    fi'
