--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 		"python.linting.pylintPath": "/opt/anaconda/bin/pylint"
 	},
 
-	"runArgs": ["--shm-size", "1gb"],
+	"runArgs": ["--shm-size", "200gb"],
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
@@ -30,5 +30,8 @@
 	// "postCreateCommand": "python --version",
 
 	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "pwrai"
+  "remoteUser": "pwrai",
+
+  "workspaceFolder": "/workspace",
+  "workspaceMount": "source=/mnt/20201010_jb/tangle-learning,target=/workspace,type=bind,consistency=cached"
 }
