--- a/tangle/ipfs/docker-compose.yml
+++ b/tangle/ipfs/docker-compose.yml
@@ -34,20 +34,33 @@ services:
     volumes:
      - data:/data:ro
     environment:
-      - STORAGE=ipfs
-      - MESSAGE_BROKER=ipfs
-      - MODEL=femnist
-      - TIMEOUT=None
-      - TRAINING_INTERVAL=20
-      - NUM_OF_TIPS=2
-      - NUM_SAMPLING_ROUND=25
-      - ACTIVE_QUOTA=0.2
       - CONNECTION_PRUNING_LOW=70
       - CONNECTION_PRUNING_HIGH=40
       - CONNECTION_PRUNING_GRACE_PERIOD=60s
       - IPFS_DATASTORE_STORAGEMAX=10GB
       - IPFS_DATASTORE_GCPERIOD=1h
       - IPFS_REPROVIDER_INTERVAL=1h
+    command:
+      - -dataset femnist
+      - -model cnn
+      - --active_quota 0.2
+      # - [--create-genesis]
+      # - [--broker BROKER]
+      # - [--timeout TIMEOUT]
+      # - [--training_interval TRAINING_INTERVAL]
+      # - [-lr LR]
+      # - [--minibatch MINIBATCH | --num-epochs NUM_EPOCHS]
+      # - [--batch-size BATCH_SIZE]
+      # - [--num-tips NUM_TIPS]
+      # - [--sample-size SAMPLE_SIZE]
+      # - [--reference-avg-top REFERENCE_AVG_TOP]
+      # - [--tip-selector {default,accuracy}]
+      # - [--acc-tip-selection-strategy {WALK,GLOBAL}]
+      # - [--acc-cumulate-ratings ACC_CUMULATE_RATINGS]
+      # - [--acc-ratings-to-weights {LINEAR}]
+      # - [--acc-select-from-weights {MAXIMUM,WEIGHTED_CHOICE}]
+      # - [--acc-alpha ACC_ALPHA]
     depends_on:
       - bootstrap
       - iota_visualization
+      - data
