--- a/tangle/ipfs/peer/docker/Dockerfile-arm64
+++ b/tangle/ipfs/peer/docker/Dockerfile-arm64
@@ -1,19 +1,18 @@
 FROM rs22/tensorflow-aarch64-v1
+ARG IPFS_VERSION=0.6.0
 
 USER root
 
 WORKDIR /
-RUN mkdir data
 RUN mkdir logs
-COPY ./data /data
 
 RUN apt-get update \
     && apt-get install -y dnsutils
 
-RUN apt install -y iproute2
+RUN apt install -y iproute2 libatlas-base-dev
 
 RUN mkdir /tmp/go-ipfs \
-    && curl -sL https://ipfs.io/ipns/dist.ipfs.io/go-ipfs/v0.6.0/go-ipfs_v0.6.0_linux-arm.tar.gz | tar xz -C /tmp/go-ipfs --strip 1 \
+    && curl -sL https://ipfs.io/ipns/dist.ipfs.io/go-ipfs/v${IPFS_VERSION}/go-ipfs_v${IPFS_VERSION}_linux-arm64.tar.gz | tar xz -C /tmp/go-ipfs --strip 1 \
     && cd /tmp/go-ipfs && ./install.sh \
     && rm -rf /tmp/ipfs
 
@@ -21,24 +20,17 @@ RUN echo "[global]\nextra-index-url=https://www.piwheels.org/simple" >> /etc/pip
 
 WORKDIR /app
 RUN pip3 uninstall -y enum34
-COPY requirements.arm64.txt ./requirements.txt
+COPY tangle/ipfs/peer/docker/requirements.arm64.txt ./requirements.txt
 RUN pip3 install -r requirements.txt
 
-RUN apt update && apt install -y libatlas-base-dev
+COPY tangle/ipfs/peer/docker/ipfs_entrypoint /usr/bin/ipfs_entrypoint
+COPY tangle/ipfs/peer/docker/entrypoint.sh .
+COPY tangle/ipfs/peer/docker/manual_garbage_collection.sh .
 
-COPY ipfs_entrypoint /usr/bin/ipfs_entrypoint
-COPY . /home/ubuntu/python3-venv/lib/python3.7/site-packages/learner
-COPY ./entrypoint.sh .
-COPY ./manual_garbage_collection.sh .
-COPY docker/prepare_data.sh /usr/bin/prepare_data.sh
-
-RUN /usr/bin/prepare_data.sh
+COPY tangle /home/ubuntu/python3-venv/lib/python3.7/site-packages/tangle/
 
 EXPOSE 4001
 EXPOSE 8000
 
 ENV PYTHONUNBUFFERED=TRUE
-RUN chmod +x ./entrypoint.sh
-RUN chmod +x ./manual_garbage_collection.sh
-
 ENTRYPOINT ["./entrypoint.sh"]
