Async operations, update IPFS, custom ipfs client

--- a/tangle/ipfs/peer/log.config
+++ b/tangle/ipfs/peer/log.config
@@ -13,7 +13,7 @@ handlers=consoleHandler
 
 [logger_ipfs_learning_tangle]
 level=INFO
-handlers=consoleHandler, fileHandler
+handlers=consoleHandler
 qualname=ipfs_learning_tangle
 #propagate=0 Does not pass messages to ancestor loggers(root)
 propagate=1
