--- a/tangle/ipfs/docker-compose.yml
+++ b/tangle/ipfs/docker-compose.yml
@@ -3,29 +3,42 @@ version: '3.7'
 volumes:
   data:
 
+networks:
+  peers_1:
+  peers_2:
+  peers_3:
+  peers_4:
+
 services:
 
   bootstrap:
     build: bootstrap
+    networks:
+      - peers_1
+      - peers_2
+      - peers_3
+      - peers_4
     ports:
       - 4001:4001
 
-  iota_visualization:
-    build: iota_visualization
-    depends_on:
-      - bootstrap
-    ports:
-      - 9000:9000
+  # iota_visualization:
+  #   build: iota_visualization
+  #   depends_on:
+  #     - bootstrap
+  #   ports:
+  #     - 9000:9000
 
   data:
     build: data
     volumes:
      - data:/data
 
-  peer:
+  peer_1:
     build:
       context: ../..
       dockerfile: tangle/ipfs/peer/docker/Dockerfile
+    networks:
+      - peers_1
     init: true
     cap_add:
       - SYS_PTRACE
@@ -62,5 +75,92 @@ services:
       # - [--acc-alpha ACC_ALPHA]
     depends_on:
       - bootstrap
-      - iota_visualization
+      # - iota_visualization
+      - data
+
+  peer_2:
+    build:
+      context: ../..
+      dockerfile: tangle/ipfs/peer/docker/Dockerfile
+    networks:
+      - peers_2
+    init: true
+    cap_add:
+      - SYS_PTRACE
+    volumes:
+      - ./logs:/logs:rw
+    volumes:
+     - data:/data:ro
+    environment:
+      - CONNECTION_PRUNING_LOW=70
+      - CONNECTION_PRUNING_HIGH=40
+      - CONNECTION_PRUNING_GRACE_PERIOD=60s
+      - IPFS_DATASTORE_STORAGEMAX=10GB
+      - IPFS_DATASTORE_GCPERIOD=1h
+      - IPFS_REPROVIDER_INTERVAL=1h
+    command:
+      - -dataset femnist
+      - -model cnn
+      - --active_quota 0.2
+    depends_on:
+      - bootstrap
+      # - iota_visualization
+      - data
+
+  peer_3:
+    build:
+      context: ../..
+      dockerfile: tangle/ipfs/peer/docker/Dockerfile
+    networks:
+      - peers_3
+    init: true
+    cap_add:
+      - SYS_PTRACE
+    volumes:
+      - ./logs:/logs:rw
+    volumes:
+     - data:/data:ro
+    environment:
+      - CONNECTION_PRUNING_LOW=70
+      - CONNECTION_PRUNING_HIGH=40
+      - CONNECTION_PRUNING_GRACE_PERIOD=60s
+      - IPFS_DATASTORE_STORAGEMAX=10GB
+      - IPFS_DATASTORE_GCPERIOD=1h
+      - IPFS_REPROVIDER_INTERVAL=1h
+    command:
+      - -dataset femnist
+      - -model cnn
+      - --active_quota 0.2
+    depends_on:
+      - bootstrap
+      # - iota_visualization
+      - data
+
+  peer_4:
+    build:
+      context: ../..
+      dockerfile: tangle/ipfs/peer/docker/Dockerfile
+    networks:
+      - peers_4
+    init: true
+    cap_add:
+      - SYS_PTRACE
+    volumes:
+      - ./logs:/logs:rw
+    volumes:
+     - data:/data:ro
+    environment:
+      - CONNECTION_PRUNING_LOW=70
+      - CONNECTION_PRUNING_HIGH=40
+      - CONNECTION_PRUNING_GRACE_PERIOD=60s
+      - IPFS_DATASTORE_STORAGEMAX=10GB
+      - IPFS_DATASTORE_GCPERIOD=1h
+      - IPFS_REPROVIDER_INTERVAL=1h
+    command:
+      - -dataset femnist
+      - -model cnn
+      - --active_quota 0.2
+    depends_on:
+      - bootstrap
+      # - iota_visualization
       - data
