--- a/config/dataset/mnist_2_class_noniid.yaml
+++ b/config/dataset/mnist_2_class_noniid.yaml
@@ -1,7 +1,10 @@
-name: mnist
+name: MNIST
 data_dir: /dhc/home/bjarne.pfitzner/workspace/federated-learning-tangle/data/mnist/noniid/2_class
 clustering: false
-use_val_set: False
+val_fraction: 0.2
 limit_clients: -1
 num_clients: 500
 num_classes: 10
+data_dim: 28
+data_ch: 1
+model_class: mnist_cnn
