--- a/config/experiment/mnist.yaml
+++ b/config/experiment/mnist.yaml
@@ -10,6 +10,17 @@ run:
   lr: 0.1
   batch_size: 16
   eval_every: 5
+  save_every: 101
+#  clients_per_round: 0.125
+#  local_epochs: 5
+
+#node:
+#  num_tips: 3
+#  test_reference_avg_top: 10
+
+#tip_selector:
+#  alpha: 0.01
+#  strategy: WALK
 
 
 hydra:
